--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -66,7 +66,8 @@
     "addPartner": "Add Partner",
     "editPartner": "Edit Partner",
     "partner": "Partner",
-    "partnerName": "Partner Name",
+    "firstName": "First Name",
+    "secondName": "Second Name",
     "companyName": "Company Name",
     "status": "Status",
     "type": "Type",
@@ -117,7 +118,8 @@
     "expired": "Expired",
     "cancelled": "Cancelled",
     "cancelInvitation": "Cancel Invitation",
-    "noInvitationsFound": "No invitations found"
+    "noInvitationsFound": "No invitations found",
+    "partnerInfoAutoFilled": "Partner information has been automatically filled from the partner profile. You can modify these fields if needed."
   },
   "common": {
     "loading": "Loading...",
@@ -171,7 +173,7 @@
     "passwordPlaceholder": "Password",
     "firstNamePlaceholder": "First Name",
     "lastNamePlaceholder": "Last Name",
-    "partnerNamePlaceholder": "Enter partner name",
+    "secondNamePlaceholder": "Second Name",
     "companyNamePlaceholder": "Enter company name",
     "phonePlaceholder": "Phone number",
     "addressPlaceholder": "Street address",
