V 0.040 Add customer settings

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,8 @@
     "partners": "Partners",
     "users": "Users",
     "invitations": "Invitations",
+    "customers": "Customers",
+    "settings": "Settings",
     "partnerInfo": "Partner Info",
     "teamMembers": "Team Members",
     "myBookings": "My Bookings",
@@ -11,6 +13,64 @@
     "systemAdmin": "System Administrator",
     "partnerAdmin": "Partner Administrator",
     "member": "Member"
+  },
+  "customers": {
+    "title": "Customers",
+    "manageCustomers": "Manage customers and their billing information",
+    "addCustomer": "Add Customer",
+    "editCustomer": "Edit Customer",
+    "addFirstCustomer": "Add First Customer",
+    "customer": "Customer",
+    "firstName": "First Name",
+    "secondName": "Second Name",
+    "companyName": "Company Name",
+    "phone": "Phone",
+    "type": "Type",
+    "status": "Status",
+    "actions": "Actions",
+    "taxInfo": "Tax Information",
+    "billing": "Billing",
+    "individual": "Individual",
+    "company": "Company",
+    "organization": "Organization",
+    "active": "Active",
+    "inactive": "Inactive",
+    "suspended": "Suspended",
+    "address": "Address",
+    "zip": "ZIP Code",
+    "city": "City",
+    "country": "Country",
+    "piva": "VAT Number",
+    "codiceFiscale": "Tax Code",
+    "pec": "Certified Email",
+    "sdiCode": "SDI Code",
+    "website": "Website",
+    "partnerInformation": "Partner Information",
+    "businessInformation": "Business Information",
+    "personalInformation": "Personal Information",
+    "addressInformation": "Address Information",
+    "businessInformation": "Business Information",
+    "billingInformation": "Billing Information",
+    "billingEmail": "Billing Email",
+    "billingPhone": "Billing Phone",
+    "billingAddress": "Billing Address",
+    "billingZip": "Billing ZIP",
+    "billingCity": "Billing City",
+    "billingCountry": "Billing Country",
+    "notes": "Notes",
+    "totalCustomers": "Total Customers",
+    "activeCustomers": "Active Customers",
+    "companies": "Companies",
+    "noCustomersFound": "No customers found. Add your first customer to get started.",
+    "accessDenied": "Access Denied",
+    "accessDeniedMessage": "Only partner administrators can access customer management."
+  },
+  "settings": {
+    "title": "Settings",
+    "manageCustomerData": "Manage your customer and billing information",
+    "managePartnerData": "Manage your partner information and business details",
+    "saveSettings": "Save Settings",
+    "billingInfoDescription": "Leave billing information empty to use the same as your personal information."
   },
   "locations": {
     "addLocation": "Add Location",
@@ -40,6 +100,17 @@
     "resetPasswordInstructions": "Enter your email address and we'll send you a link to reset your password.",
     "checkEmailInstructions": "We've sent a password reset link to",
     "completeRegistration": "Complete Your Registration",
+    "registrationComplete": "Registration Complete!",
+    "verificationEmailSent": "We've sent a verification email to",
+    "checkYourEmail": "Check Your Email",
+    "checkEmailInbox": "Look for an email from us in your inbox",
+    "clickVerificationLink": "Click the Verification Link",
+    "clickLinkInEmail": "Click the link in the email to verify your account",
+    "loginToAccount": "Login to Your Account",
+    "afterVerificationLogin": "After verification, you can login with your credentials",
+    "importantNote": "Important Note",
+    "verificationEmailNote": "You must verify your email before you can login to your account",
+    "goToLogin": "Go to Login Page",
     "createAccount": "Create Account",
     "creatingAccount": "Creating Account",
     "invalidInvitation": "Invalid Invitation",
@@ -143,12 +214,23 @@
     "accountCreatedSuccessfully": "Account created successfully! Please check your email to verify your account.",
     "passwordResetEmailSent": "Password reset email sent! Check your inbox.",
     "passwordsDoNotMatch": "Passwords do not match",
+    "registrationCompletePleaseVerify": "Registration complete! Please check your email to verify your account.",
     "errorSigningOut": "Error signing out",
     "errorLoadingPartners": "Error loading partners",
     "errorLoadingInvitations": "Error loading invitations",
+    "errorLoadingCustomers": "Error loading customers",
+    "errorLoadingCustomerData": "Error loading customer data",
     "partnerCreatedSuccessfully": "Partner created successfully",
     "partnerUpdatedSuccessfully": "Partner updated successfully",
+    "partnerDataSavedSuccessfully": "Partner data saved successfully",
+    "errorLoadingPartnerData": "Error loading partner data",
+    "errorSavingPartnerData": "Error saving partner data",
     "errorSavingPartner": "Error saving partner",
+    "customerCreatedSuccessfully": "Customer created successfully",
+    "customerUpdatedSuccessfully": "Customer updated successfully",
+    "customerDataSavedSuccessfully": "Customer data saved successfully",
+    "errorSavingCustomer": "Error saving customer",
+    "errorSavingCustomerData": "Error saving customer data",
     "locationCreatedSuccessfully": "Location created successfully",
     "locationUpdatedSuccessfully": "Location updated successfully",
     "locationDeletedSuccessfully": "Location deleted successfully",
@@ -181,10 +263,19 @@
     "cityPlaceholder": "City",
     "countryPlaceholder": "Country",
     "pivaPlaceholder": "VAT number",
+    "codiceFiscalePlaceholder": "Italian tax code",
     "pecPlaceholder": "Certified email address",
+    "sdiCodePlaceholder": "SDI code for electronic invoicing",
     "websitePlaceholder": "https://example.com",
     "locationNamePlaceholder": "Enter location name",
-    "customMessagePlaceholder": "Add a personal message to the invitation (optional)"
+    "customMessagePlaceholder": "Add a personal message to the invitation (optional)",
+    "billingEmailPlaceholder": "Billing email address",
+    "billingPhonePlaceholder": "Billing phone number",
+    "billingAddressPlaceholder": "Billing street address",
+    "billingZipPlaceholder": "Billing ZIP code",
+    "billingCityPlaceholder": "Billing city",
+    "billingCountryPlaceholder": "Billing country",
+    "notesPlaceholder": "Additional notes or comments"
   },
   "app": {
     "appName": "Coworking Management",
