--- a/src/locales/it.json
+++ b/src/locales/it.json
@@ -4,6 +4,8 @@
     "partners": "Partner",
     "users": "Utenti",
     "invitations": "Inviti",
+    "customers": "Clienti",
+    "settings": "Impostazioni",
     "partnerInfo": "Info Partner",
     "teamMembers": "Membri del Team",
     "myBookings": "Le Mie Prenotazioni",
@@ -11,6 +13,64 @@
     "systemAdmin": "Amministratore di Sistema",
     "partnerAdmin": "Amministratore Partner",
     "member": "Membro"
+  },
+  "customers": {
+    "title": "Clienti",
+    "manageCustomers": "Gestisci clienti e le loro informazioni di fatturazione",
+    "addCustomer": "Aggiungi Cliente",
+    "editCustomer": "Modifica Cliente",
+    "addFirstCustomer": "Aggiungi Primo Cliente",
+    "customer": "Cliente",
+    "firstName": "Nome",
+    "secondName": "Cognome",
+    "companyName": "Nome Azienda",
+    "phone": "Telefono",
+    "type": "Tipo",
+    "status": "Stato",
+    "actions": "Azioni",
+    "taxInfo": "Informazioni Fiscali",
+    "billing": "Fatturazione",
+    "individual": "Privato",
+    "company": "Azienda",
+    "organization": "Organizzazione",
+    "active": "Attivo",
+    "inactive": "Inattivo",
+    "suspended": "Sospeso",
+    "address": "Indirizzo",
+    "zip": "CAP",
+    "city": "Città",
+    "country": "Paese",
+    "piva": "Partita IVA",
+    "codiceFiscale": "Codice Fiscale",
+    "pec": "PEC",
+    "sdiCode": "Codice SDI",
+    "website": "Sito Web",
+    "partnerInformation": "Informazioni Partner",
+    "businessInformation": "Informazioni Aziendali",
+    "personalInformation": "Informazioni Personali",
+    "addressInformation": "Informazioni Indirizzo",
+    "businessInformation": "Informazioni Aziendali",
+    "billingInformation": "Informazioni di Fatturazione",
+    "billingEmail": "Email Fatturazione",
+    "billingPhone": "Telefono Fatturazione",
+    "billingAddress": "Indirizzo Fatturazione",
+    "billingZip": "CAP Fatturazione",
+    "billingCity": "Città Fatturazione",
+    "billingCountry": "Paese Fatturazione",
+    "notes": "Note",
+    "totalCustomers": "Totale Clienti",
+    "activeCustomers": "Clienti Attivi",
+    "companies": "Aziende",
+    "noCustomersFound": "Nessun cliente trovato. Aggiungi il tuo primo cliente per iniziare.",
+    "accessDenied": "Accesso Negato",
+    "accessDeniedMessage": "Solo gli amministratori partner possono accedere alla gestione clienti."
+  },
+  "settings": {
+    "title": "Impostazioni",
+    "manageCustomerData": "Gestisci le tue informazioni cliente e di fatturazione",
+    "managePartnerData": "Gestisci le tue informazioni partner e dettagli aziendali",
+    "saveSettings": "Salva Impostazioni",
+    "billingInfoDescription": "Lascia vuote le informazioni di fatturazione per utilizzare le stesse informazioni personali."
   },
   "locations": {
     "addLocation": "Aggiungi Sede",
@@ -40,6 +100,17 @@
     "resetPasswordInstructions": "Inserisci il tuo indirizzo email e ti invieremo un link per reimpostare la password.",
     "checkEmailInstructions": "Abbiamo inviato un link di reimpostazione password a",
     "completeRegistration": "Completa la tua Registrazione",
+    "registrationComplete": "Registrazione Completata!",
+    "verificationEmailSent": "Abbiamo inviato un'email di verifica a",
+    "checkYourEmail": "Controlla la tua Email",
+    "checkEmailInbox": "Cerca un'email da parte nostra nella tua casella di posta",
+    "clickVerificationLink": "Clicca il Link di Verifica",
+    "clickLinkInEmail": "Clicca il link nell'email per verificare il tuo account",
+    "loginToAccount": "Accedi al tuo Account",
+    "afterVerificationLogin": "Dopo la verifica, puoi accedere con le tue credenziali",
+    "importantNote": "Nota Importante",
+    "verificationEmailNote": "Devi verificare la tua email prima di poter accedere al tuo account",
+    "goToLogin": "Vai alla Pagina di Login",
     "createAccount": "Crea Account",
     "creatingAccount": "Creazione Account",
     "invalidInvitation": "Invito Non Valido",
@@ -143,12 +214,23 @@
     "accountCreatedSuccessfully": "Account creato con successo! Controlla la tua email per verificare il tuo account.",
     "passwordResetEmailSent": "Email di reimpostazione password inviata! Controlla la tua casella di posta.",
     "passwordsDoNotMatch": "Le password non corrispondono",
+    "registrationCompletePleaseVerify": "Registrazione completata! Controlla la tua email per verificare il tuo account.",
     "errorSigningOut": "Errore durante il logout",
     "errorLoadingPartners": "Errore nel caricamento dei partner",
     "errorLoadingInvitations": "Errore nel caricamento degli inviti",
+    "errorLoadingCustomers": "Errore nel caricamento dei clienti",
+    "errorLoadingCustomerData": "Errore nel caricamento dei dati cliente",
     "partnerCreatedSuccessfully": "Partner creato con successo",
     "partnerUpdatedSuccessfully": "Partner aggiornato con successo",
+    "partnerDataSavedSuccessfully": "Dati partner salvati con successo",
+    "errorLoadingPartnerData": "Errore nel caricamento dei dati partner",
+    "errorSavingPartnerData": "Errore nel salvataggio dei dati partner",
     "errorSavingPartner": "Errore nel salvataggio del partner",
+    "customerCreatedSuccessfully": "Cliente creato con successo",
+    "customerUpdatedSuccessfully": "Cliente aggiornato con successo",
+    "customerDataSavedSuccessfully": "Dati cliente salvati con successo",
+    "errorSavingCustomer": "Errore nel salvataggio del cliente",
+    "errorSavingCustomerData": "Errore nel salvataggio dei dati cliente",
     "locationCreatedSuccessfully": "Sede creata con successo",
     "locationUpdatedSuccessfully": "Sede aggiornata con successo",
     "locationDeletedSuccessfully": "Sede eliminata con successo",
@@ -181,10 +263,19 @@
     "cityPlaceholder": "Città",
     "countryPlaceholder": "Paese",
     "pivaPlaceholder": "Partita IVA",
+    "codiceFiscalePlaceholder": "Codice fiscale italiano",
     "pecPlaceholder": "Indirizzo PEC",
+    "sdiCodePlaceholder": "Codice SDI per fatturazione elettronica",
     "websitePlaceholder": "https://esempio.it",
     "locationNamePlaceholder": "Inserisci nome sede",
-    "customMessagePlaceholder": "Aggiungi un messaggio personale all'invito (opzionale)"
+    "customMessagePlaceholder": "Aggiungi un messaggio personale all'invito (opzionale)",
+    "billingEmailPlaceholder": "Email fatturazione",
+    "billingPhonePlaceholder": "Telefono fatturazione",
+    "billingAddressPlaceholder": "Indirizzo fatturazione",
+    "billingZipPlaceholder": "CAP fatturazione",
+    "billingCityPlaceholder": "Città fatturazione",
+    "billingCountryPlaceholder": "Paese fatturazione",
+    "notesPlaceholder": "Note aggiuntive o commenti"
   },
   "app": {
     "appName": "Gestione Coworking",
